// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for CannyFunctions's identify destination action: all fields 1`] = `
Object {
  "traits": Object {
    "email": "maz@wigja.hn",
    "name": "6dTsGB8(w5n#9G8",
  },
  "type": "6dTsGB8(w5n#9G8",
  "userId": "6dTsGB8(w5n#9G8",
}
`;

exports[`Testing snapshot for CannyFunctions's identify destination action: required fields 1`] = `
Object {
  "traits": Object {},
  "type": "6dTsGB8(w5n#9G8",
  "userId": "6dTsGB8(w5n#9G8",
}
`;
